css/style.css
body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 14px;
}

img {
  max-width: 100%;
}


/** Header **/
header {
  position: fixed;
  z-index: 9;
  width: 100%;
}

header nav {
  width: 100%;
}

header nav .container {
  width: 100%;
  display: flex;
  align-items: center;
}

header nav .container ul li {
  font-size: 1.4rem;
  font-weight: bold;
  padding-left: 2.5rem;
}

header .active {
  color: #399BD1;
}

header img {
  padding-left: 1rem;
}


/** Main Universal Styles **/
main h2 {
  color: #399BD1;
  font-size: 2rem;
  font-weight: bold;
  padding-left: 2rem;
}

/** Jumbotron **/

.jumbotron {
  background-image: url('../assets/images/jumbotron-bike.jpg');
  background-size: cover;
  padding: 16rem 0;
  color: white;
  text-shadow: -1px -1px 0 #000,
               1px -1px 0 #000,
               -1px 1px 0 #000,
               1px 1px 0 #000;
}

.jumbotron .container {
  width: 80%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.jumbotron h1 {
  font-family: 'Monoton', cursive;
  font-size: 9.8rem;
}

.jumbotron p {
  padding: 2.8rem 1rem;
  line-height: 1.3;
  max-width: 65rem;
  margin: auto;
}

.jumbotron .button-ctr {
  width: 100%;
  display: flex;
  justify-content: center;
}

.jumbotron a {
  text-shadow: none;
  font-size: 1.5rem;
  padding: 1.3rem 4rem;
  background-color: #399BD1;
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
  transition: box-shadow 750ms ease .1s;
}

.jumbotron a:hover {
  box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
}

.jumbotron a:active {
  box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
}


/** Featured Section **/
#featured h3 {
  font-size: 1.75rem;
  font-weight: bold;
}

#featured p {
  font-size: 1.4rem;
}

#featured .ft-story {
  padding: 5rem 1rem;
}

#featured .ft-story {
  line-height: 1.5;
}

#featured .products {
  padding: 5rem 1rem 0 2rem;
}

#featured .products h3 {
  color: #399BD1;
}

#featured .products ul {
  list-style-type: none;
}

#featured .products ul li {
  line-height: 1.1;
}


/** Projects Section **/

#projects {
  text-align: left;
}

#projects h2 {
  padding-top: 2rem;
}

